--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 sudo: required
 services:
   - docker
+env:
+  global:
+    - GIT_SHA=$(get rev-parse HEAD)
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
   - openssl aes-256-cbc -K $encrypted_ff68eaeaf96f_key -iv $encrypted_ff68eaeaf96f_iv -in multi-k8s-300021-87db654b23d0.json.enc -out multi-k8s-300021-87db654b23d0.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null;
