--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ services:
   - docker
 env:
   global:
-    - GIT_SHA=$(get rev-parse HEAD)
+    - GIT_SHA=$(git rev-parse HEAD)
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
   - openssl aes-256-cbc -K $encrypted_ff68eaeaf96f_key -iv $encrypted_ff68eaeaf96f_iv -in multi-k8s-300021-87db654b23d0.json.enc -out multi-k8s-300021-87db654b23d0.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null;
-  - source /home/google-cloud-sdk/path.bach.inc
+  - source $HOME/google-cloud-sdk/path.bash.inc
   - curl gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
   - gcloud config sest project multi-k8s-300021
