--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
-  - gcloud auth activate-service-account --key-file service-account.json
+  - gcloud auth activate-service-account --key-file multi-k8s-300021-87db654b23d0.json
   - gcloud config sest project multi-k8s-300021
   - gcloud config set compute/zone us-central1-b
   - gcloud container clusters get-credentials multi-cluster
