--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -6,19 +6,34 @@ metadata:
     kubernetes.io/ingress.class: 'nginx'
     nginx.ingress.kubernetes.io/use-regex: 'true'
     nginx.ingress.kubernetes.io/rewrite-target: /$1
-    # UPDATE THIS LINE ABOVE
+    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
+    nginx.ingess.kubernetes.io/ssl-redirect: 'true'
 spec:
+  tls:
+    - hosts:
+        - abner2days.xyz
+        - www.abner2days.xyz
+      secretName: abner2days-xyz-tls
   rules:
-    - http:
+    - host: abner2days.xyz
+      http:
         paths:
           - path: /?(.*)
-            # UPDATE THIS LINE ABOVE
             backend:
               serviceName: client-cluster-ip-service
               servicePort: 3000
           - path: /api/?(.*)
-            # UPDATE THIS LINE ABOVE
             backend:
               serviceName: server-cluster-ip-service
               servicePort: 5000
-
+    - host: www.abner2days.xyz
+      http:
+        paths:
+          - path: /?(.*)
+            backend:
+              serviceName: client-cluster-ip-service
+              servicePort: 3000
+          - path: /api/?(.*)
+            backend:
+              serviceName: server-cluster-ip-service
+              servicePort: 5000
